--- a/drawing/package.json
+++ b/drawing/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@agm/drawing",
-  "version": "3.0.0-beta.0",
+  "name": "@powen_labs/maps-drawing/drawing",
+  "version": "3.0.2-beta.0",
   "description": "Angular Google Maps (AGM) extension for google maps drawing library",
   "author": "Feliks Khantsis",
   "license": "MIT",
